DAOS-13511 [Java] Support JDK11
Signed-off-by: jiafuzha <jiafu.zhang@intel.com>