@@ -137,11 +137,17 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
+	<artifactId>maven-surefire-plugin</artifactId>
+	<configuration>
+          <argLine>--add-exports java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
+	<artifactId>maven-failsafe-plugin</artifactId>
+	<configuration>
+          <argLine>--add-exports java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
